fix: outlet horizontal scroll

--- a/src/app/features/banking/banking.component.scss
+++ b/src/app/features/banking/banking.component.scss
@@ -57,4 +57,5 @@
 
 .outlet {
   grid-area: main;
+  max-width: 80vw;
 }
